turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:3: error: Missing closing brace `}' assumed here
val STOP   = 0;
^Turmite:3: error: expected class or object definition
val STOP   = 0;
^Turmite:4: error: expected class or object definition
val NOTURN = 1;
^Turmite:5: error: expected class or object definition
val LEFT   = 2;
^Turmite:6: error: expected class or object definition
val BACK   = 4;
^Turmite:7: error: expected class or object definition
val RIGHT  = 8;
^Turmite:9: error: expected class or object definition
val NEXT_COLOR = 0;
^Turmite:10: error: expected class or object definition
val NEXT_MOVE  = 1;
^Turmite:11: error: expected class or object definition
val NEXT_STATE = 2;
^Turmite:14: error: expected class or object definition
var rule:Array[Array[Array[Int]]] = null // Change this
^Turmite:15: error: expected class or object definition
var nbSteps:Int = 0; // Change this
^Turmite:22: error: expected class or object definition
def initLangton(name:String) {
^Turmite:45: error: expected class or object definition
def init() {
^